--- a/index.html
+++ b/index.html
@@ -3,6 +3,14 @@
 <head>
 	<title>Katie Daniel Portfolio</title>
 	<meta charset="utf-8">
+	<meta property="og:site_name" content="Kaitlyn Daniel Portfolio"/>
+<meta property="og:title" content="School Counseling Portfolio"/>
+<meta property="og:description" content="I aspire to become a school counselor!"/> 
+  <meta property="og:image" content="Katie.jfif">
+<meta property="og:image:width" content="450"/>
+<meta property="og:image:height" content="298"/>
+<meta property="og:url" content="https://danielk2395.github.io">
+<meta property="og:type" content="portfolio"/>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="bootstrap.css">
 	<!--link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"-->
