--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<title>Katie Daniel Portfolio</title>
 	<meta charset="utf-8">
 	<meta property="og:site_name" content="Kaitlyn Daniel Portfolio"/>
-<meta property="og:title" content="School Counseling Portfolio"/>
+<meta property="og:title" content="Portfolio"/>
 <meta property="og:description" content="I aspire to become a school counselor!"/> 
   <meta property="og:image" content="Katie.jfif">
 <meta property="og:image:width" content="450"/>
