--- a/work.html
+++ b/work.html
@@ -103,8 +103,8 @@
 			<div class="row content">
 				<div class="col-lg-6 col-lg-offset-3">
 					<ul style="list-style-type:none;">
-							<a href="pdf/SchoolDataProfileExamination&D.A.T.A.Example.pdf"><li class="list"><h2 class="left">Counseling with Quantitative Analysis</h2></li></a>
-							<a href="pdf/ClosingTheGapActivityExample.pdf"><li class="list"><h2 class="left">Closing the Gap Activity</h2></li></a>
+							<a href="pdf/data.pdf"><li class="list"><h2 class="left">Counseling with Quantitative Analysis</h2></li></a>
+							<a href="pdf/gap.pdf"><li class="list"><h2 class="left">Closing the Gap Activity</h2></li></a>
 							<a href="pdf/GiftedStudentsNeedsConsideration.pdf"><li class="list"><h2 class="left">Counseling Students who are Gifted</h2></li></a>	
 							<a href="pdf/CaseStudy.pdf"><li class="list"><h2 class="left">Case Study</h2></li></a>
 							<a href="pdf/LessonPlanES_Example.pdf"><li class="list"><h2 class="left">Lesson Plan</h2></li></a>
