--- a/home.html
+++ b/home.html
@@ -208,7 +208,7 @@
   </div>
 
 
-<footer class="footer" style="background: #222222;"> 
+	<footer class="footer" style="background: #222222;"> 
 	<div class="conainer-fluid text-center">
 			<div class="row content " style="margin-top: 20px;">
 				<div class="col-lg-12" >
@@ -220,7 +220,7 @@
 			</div>
 		
 	</div>
-  <footer>  
+	</footer>  
 </div>
 </body>
 </html>
