--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 	<title>Katie Daniel Portfolio</title>
 	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta property="og:site_name" content="Kaitlyn Daniel Portfolio"/>
 <meta property="og:title" content="Portfolio"/>
 <meta property="og:description" content="I aspire to become a school counselor!"/> 
