--- a/index.html
+++ b/index.html
@@ -4,6 +4,17 @@
 	<title>Katie Daniel Portfolio</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="keywords" content="Kaitlyn Daniel, Portfolio"/>
+	<meta name="description" content="Work relevant to school counseling."/>
+	<meta name="subject" content="Portfolio">
+	<meta name="robots" content="index,follow" />
+	<meta name="revised" content="Sunday, July 18th, 2010, 5:15 pm" />
+	<meta name="abstract" content="">
+	<meta name="topic" content="">
+	<meta name="summary" content="">
+	<meta name="Classification" content="Business">
+	<meta name="author" content="Katie Daniel, danielk2395@gmail.com">
+	<meta name="url" content="https://danielk2395.github.io">
 	<meta property="og:site_name" content="Kaitlyn Daniel Portfolio"/>
 <meta property="og:title" content="Portfolio"/>
 <meta property="og:description" content="I aspire to become a school counselor!"/> 
