--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<meta name="keywords" content="Kaitlyn Daniel, Portfolio"/>
 	<meta name="description" content="Work relevant to school counseling."/>
 	<meta name="subject" content="Portfolio">
-	<meta name="robots" content="index,follow" />
+	<meta name="robots" content="index,follow,max-image-preview:standard" />
 	<meta name="Classification" content="Business">
 	<meta name="author" content="Katie Daniel, danielk2395@gmail.com">
 	<meta name="url" content="https://danielk2395.github.io">
@@ -15,8 +15,8 @@
 <meta property="og:title" content="Portfolio"/>
 <meta property="og:description" content="I aspire to become a school counselor!"/> 
   <meta property="og:image" content="Katie.jfif">
-<meta property="og:image:width" content="450"/>
-<meta property="og:image:height" content="298"/>
+<meta property="og:image:width" content="200"/>
+<meta property="og:image:height" content="200"/>
 <meta property="og:url" content="https://danielk2395.github.io">
 <meta property="og:type" content="portfolio"/>
 <link rel="stylesheet" href="bootstrap.css">
