--- a/index.html
+++ b/index.html
@@ -6,17 +6,17 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="keywords" content="Kaitlyn Daniel, Portfolio"/>
 	<meta name="description" content="Work relevant to school counseling."/>
-	<meta name="subject" content="Portfolio">
+	<meta name="subject" content="Kaitlyn Daniel">
 	<meta name="robots" content="index,follow,max-image-preview:standard" />
 	<meta name="Classification" content="Business">
 	<meta name="author" content="Katie Daniel, danielk2395@gmail.com">
 	<meta name="url" content="https://danielk2395.github.io">
 	<meta property="og:site_name" content="Kaitlyn Daniel Portfolio"/>
-<meta property="og:title" content="Portfolio"/>
+<meta property="og:title" content="Kaitlyn Daniel Portfolio"/>
 <meta property="og:description" content="I aspire to become a school counselor!"/> 
-  <meta property="og:image" content="Katie.jfif">
-<meta property="og:image:width" content="200"/>
-<meta property="og:image:height" content="200"/>
+  <meta property="og:image" content="snow.jpg">
+<meta property="og:image:width" content="359"/>
+<meta property="og:image:height" content="455"/>
 <meta property="og:url" content="https://danielk2395.github.io">
 <meta property="og:type" content="portfolio"/>
 <link rel="stylesheet" href="bootstrap.css">
