--- a/work.html
+++ b/work.html
@@ -74,6 +74,19 @@
 
 		.left { 
 			margin-left: 10px; 
+			
+		}
+
+		@media screen and (min-width: 646px) { 
+			.list{
+				border-width: 4px; 
+				}
+		}
+
+		@media screen and (max-width: 645px) { 
+			.left{
+				font-size: 20px; 
+			}
 		}
 		</style>
 </head>
