--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@
 	<title>Katie Daniel Portfolio</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta name="keywords" content="Kaitlyn Daniel, Portfolio"/>
+	<meta name="keywords" content="Kaitlyn Daniel"/>
 	<meta name="description" content="Work relevant to school counseling."/>
 	<meta name="subject" content="Kaitlyn Daniel">
 	<meta name="robots" content="index,follow,max-image-preview:standard" />
 	<meta name="Classification" content="Business">
 	<meta name="author" content="Katie Daniel, danielk2395@gmail.com">
 	<meta name="url" content="https://danielk2395.github.io">
-	<meta property="og:site_name" content="Kaitlyn Daniel Portfolio"/>
-<meta property="og:title" content="Kaitlyn Daniel Portfolio"/>
+	<meta property="og:site_name" content="Kaitlyn Daniel"/>
+<meta property="og:title" content="Kaitlyn Daniel"/>
 <meta property="og:description" content="I aspire to become a school counselor!"/> 
   <meta property="og:image" content="snow.jpg">
 <meta property="og:image:width" content="359"/>
