--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<meta name="author" content="Katie Daniel, danielk2395@gmail.com">
 	<meta name="url" content="https://danielk2395.github.io">
 	<meta property="og:site_name" content="Kaitlyn Daniel"/>
-<meta property="og:title" content="Kaitlyn Daniel"/>
+<meta property="og:title" content="Portfolio"/>
 <meta property="og:description" content="I aspire to become a school counselor!"/> 
   <meta property="og:image" content="snow.jpg">
 <meta property="og:image:width" content="359"/>
