--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<title>Katie Daniel Portfolio</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta name="keywords" content="Kaitlyn Daniel"/>
+	<meta name="keywords" content="Portfolio"/>
 	<meta name="description" content="Work relevant to school counseling."/>
 	<meta name="subject" content="Kaitlyn Daniel">
 	<meta name="robots" content="index,follow,max-image-preview:standard" />
