--- a/work.html
+++ b/work.html
@@ -116,14 +116,15 @@
 			<div class="row content">
 				<div class="col-lg-8 col-lg-offset-2">
 					<ul style="list-style-type:none;">
-							<a href="pdf/data.pdf"><li class="list"><h2 class="left">Counseling with Quantitative Analysis</h2></li></a>
+							<a href="pdf/GiftedStudentsNeedsConsideration.pdf"><li class="list"><h2 class="left">Counseling Students who are Gifted</h2></li></a>
+							<a href="pdf/career.pdf"><li class="list"><h2 class="left">Career Counseling for LGBTQ Adolescents</h2></li></a>
 							<a href="pdf/gap.pdf"><li class="list"><h2 class="left">Closing the Gap Activity</h2></li></a>
-							<a href="pdf/GiftedStudentsNeedsConsideration.pdf"><li class="list"><h2 class="left">Counseling Students who are Gifted</h2></li></a>	
-							<a href="pdf/CaseStudy.pdf"><li class="list"><h2 class="left">Case Study</h2></li></a>
-							<a href="pdf/LessonPlanES_Example.pdf"><li class="list"><h2 class="left">Lesson Plan</h2></li></a>
+							<a href="pdf/data.pdf"><li class="list"><h2 class="left">Counseling with Quantitative Analysis</h2></li></a>
 							<a href="pdf/SchoolCounselorRoleInCrisis.pdf"><li class="list"><h2 class="left">The Counselor's Role During Crisis</h2></li></a>
 							<a href="pdf/SMART_Goal&Vission_MissionStatementExample.pdf"><li class="list"><h2 class="left">Goal, Mission, Vision Statement</h2></li></a>
-							<a href="pdf/TimeManagementLessonPlan.pdf"><li class="list"><h2 class="left">Time Management Lesson Plan</h2></li></a>	
+							<a href="pdf/TimeManagementLessonPlan.pdf"><li class="list"><h2 class="left">Time Management Lesson Plan</h2></li></a>
+							<a href="pdf/LessonPlanES_Example.pdf"><li class="list"><h2 class="left">Lesson Plan</h2></li></a>	
+							<a href="pdf/CaseStudy.pdf"><li class="list"><h2 class="left">Case Study</h2></li></a>
 					</ul>
 				</div>
 			</div><!-- content -->
